# shiritori-AI

./: .gitignore  Journal.md  README.md  first_system_prompt.txt  pyproject.toml  shiritori-AI.py  shiritori-AI.rb
