[tool.poetry]
name = "shiritori-ai"
version = "0.1.0"
description = "Have ai do Shiritori."
authors = ["Mitsu Uemura <mitsuhide.uemura@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
google-generativeai = "^0.8.3"
black = "^24.10.0"
ruff = "^0.6.9"
mecab-python3 = "^1.0.9"
unidic-lite = "^1.0.8"
pykakasi = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
